added a regex for 5 more characters

--- a/Project/1_wikipedia_south_park_characters.ipynb
+++ b/Project/1_wikipedia_south_park_characters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "9dde05ab",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "5956da3b",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "39657af6",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "b1f24f43",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "74f078b5",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "59ec3875",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "63103775",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "51e44205",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        " 'Wendy Testaburger': 'Wendy_Testaburger'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "b89fc87a",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        " ('List of staff at South Park Elementary#Mrs. Nelson', 'Mrs. Nelson')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "655a38bd",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "f3beee26",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        " 'Mrs. Nelson': 'List_of_staff_at_South_Park_Elementary#Mrs._Nelson'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "id": "cf291ad0",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        " 'Pip Pirrup']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "f2e214c7",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "5c65e794",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        " 'Pip Pirrup': 'Pip_Pirrup'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,8 +427,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6db2ccc",
+   "metadata": {},
+   "source": [
+    "Finally, some cases that were not handled, to get as many characters possible:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
+   "id": "fff409e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Jesus and Pals', 'Jesus'),\n",
+       " ('Priesthood in the Catholic Church', 'Catholic priest'),\n",
+       " ('Santa Claus (South Park)', 'Santa'),\n",
+       " ('Towelie (character)', 'Towelie'),\n",
+       " ('Chef (South Park)', 'Chef'),\n",
+       " ('Satan (South Park)', 'Satan')]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = r\"\\|{1}\\s{1}[\\[]{2}([\\s\\w\\(\\)]+)\\|{1}([\\w\\s]+)[\\]]{2}[\\r\\n]{1}\"\n",
+    "\n",
+    "matches = re.findall(pattern, main_page)\n",
+    "matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "cd493f81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for match in matches:\n",
+    "    #match is of the form ('main', character name)\n",
+    "    if match[1]:\n",
+    "        characters_dict[match[1]]=match[0].replace(' ', '_')\n",
+    "    elif not match[1] and not match[0]:\n",
+    "        continue\n",
+    "    else:\n",
+    "        characters_dict[match[0]]=match[0].replace(' ', '_')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "722bdbf4",
    "metadata": {},
    "outputs": [],
@@ -450,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "id": "cdb8606a",
    "metadata": {},
    "outputs": [],
@@ -464,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "id": "28b57171",
    "metadata": {},
    "outputs": [
@@ -517,13 +571,19 @@
        " 'Big Gay Al': 'https://en.wikipedia.org/wiki/Big_Gay_Al',\n",
        " 'Terrance and Phillip': 'https://en.wikipedia.org/wiki/Terrance_and_Phillip',\n",
        " 'Pip Pirrup': 'https://en.wikipedia.org/wiki/Pip_Pirrup',\n",
+       " 'Jesus': 'https://en.wikipedia.org/wiki/Jesus_and_Pals',\n",
+       " 'Catholic priest': 'https://en.wikipedia.org/wiki/Priesthood_in_the_Catholic_Church',\n",
+       " 'Santa': 'https://en.wikipedia.org/wiki/Santa_Claus_(South_Park)',\n",
+       " 'Towelie': 'https://en.wikipedia.org/wiki/Towelie_(character)',\n",
+       " 'Chef': 'https://en.wikipedia.org/wiki/Chef_(South_Park)',\n",
+       " 'Satan': 'https://en.wikipedia.org/wiki/Satan_(South_Park)',\n",
        " 'Randy Marsh': 'https://en.wikipedia.org/wiki/Randy_and_Sharon_Marsh',\n",
        " 'Sharon Marsh': 'https://en.wikipedia.org/wiki/Randy_and_Sharon_Marsh',\n",
        " 'Gerald Broflovski': 'https://en.wikipedia.org/wiki/Gerald_and_Sheila_Broflovski',\n",
        " 'Sheila Broflovski': 'https://en.wikipedia.org/wiki/Gerald_and_Sheila_Broflovski'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "id": "94251e9a",
    "metadata": {},
    "outputs": [],
@@ -554,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "id": "51ef9a31",
    "metadata": {},
    "outputs": [
@@ -772,6 +832,30 @@
        "      <td>https://en.wikipedia.org/wiki/Pip_Pirrup</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>Jesus</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Jesus_and_Pals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Catholic priest</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Priesthood_in_th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Santa</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Santa_Claus_(Sou...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Towelie</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Towelie_(character)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chef</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Chef_(South_Park)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Satan</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Satan_(South_Park)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Randy Marsh</th>\n",
        "      <td>https://en.wikipedia.org/wiki/Randy_and_Sharon...</td>\n",
        "    </tr>\n",
@@ -840,13 +924,19 @@
        "Big Gay Al                      https://en.wikipedia.org/wiki/Big_Gay_Al\n",
        "Terrance and Phillip   https://en.wikipedia.org/wiki/Terrance_and_Phi...\n",
        "Pip Pirrup                      https://en.wikipedia.org/wiki/Pip_Pirrup\n",
+       "Jesus                       https://en.wikipedia.org/wiki/Jesus_and_Pals\n",
+       "Catholic priest        https://en.wikipedia.org/wiki/Priesthood_in_th...\n",
+       "Santa                  https://en.wikipedia.org/wiki/Santa_Claus_(Sou...\n",
+       "Towelie                https://en.wikipedia.org/wiki/Towelie_(character)\n",
+       "Chef                     https://en.wikipedia.org/wiki/Chef_(South_Park)\n",
+       "Satan                   https://en.wikipedia.org/wiki/Satan_(South_Park)\n",
        "Randy Marsh            https://en.wikipedia.org/wiki/Randy_and_Sharon...\n",
        "Sharon Marsh           https://en.wikipedia.org/wiki/Randy_and_Sharon...\n",
        "Gerald Broflovski      https://en.wikipedia.org/wiki/Gerald_and_Sheil...\n",
        "Sheila Broflovski      https://en.wikipedia.org/wiki/Gerald_and_Sheil..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "id": "affd2892",
    "metadata": {},
    "outputs": [],
@@ -866,13 +956,13 @@
     "# Create a column of first names or nicknames. Could be a list for cartman, but if I had to use only one, I would use the surname\n",
     "first_names = []\n",
     "\n",
-    "titles = ['mr.', 'ms.', 'mrs.', 'dr.', 'pc', 'officer', 'father']\n",
+    "titles = ['mr.', 'ms.', 'mrs.', 'dr.', 'pc', 'officer', 'father', 'catholic']\n",
     "\n",
     "\n",
     "for character in characters_df.index.to_list():\n",
     "    split_list = character.split(' ')\n",
     "    if split_list[0].lower() in titles:\n",
-    "        first_names.append(split_list[-1])\n",
+    "        first_names.append(split_list[-1].title())\n",
     "    elif len(split_list)==2:\n",
     "        if split_list[0]=='Eric':\n",
     "            first_names.append(split_list[1])\n",
@@ -884,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "id": "4f586b7d",
    "metadata": {},
    "outputs": [
@@ -937,13 +1027,19 @@
        " 'Big Gay Al',\n",
        " 'Terrance and Phillip',\n",
        " 'Pip',\n",
+       " 'Jesus',\n",
+       " 'Priest',\n",
+       " 'Santa',\n",
+       " 'Towelie',\n",
+       " 'Chef',\n",
+       " 'Satan',\n",
        " 'Randy',\n",
        " 'Sharon',\n",
        " 'Gerald',\n",
        " 'Sheila']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
    "id": "3d8804cc",
    "metadata": {},
    "outputs": [],
@@ -964,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "id": "edc0ed92",
    "metadata": {},
    "outputs": [
@@ -1230,6 +1326,36 @@
        "      <td>Pip</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>Jesus</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Jesus_and_Pals</td>\n",
+       "      <td>Jesus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Catholic priest</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Priesthood_in_th...</td>\n",
+       "      <td>Priest</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Santa</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Santa_Claus_(Sou...</td>\n",
+       "      <td>Santa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Towelie</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Towelie_(character)</td>\n",
+       "      <td>Towelie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chef</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Chef_(South_Park)</td>\n",
+       "      <td>Chef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Satan</th>\n",
+       "      <td>https://en.wikipedia.org/wiki/Satan_(South_Park)</td>\n",
+       "      <td>Satan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Randy Marsh</th>\n",
        "      <td>https://en.wikipedia.org/wiki/Randy_and_Sharon...</td>\n",
        "      <td>Randy</td>\n",
@@ -1302,6 +1428,12 @@
        "Big Gay Al                      https://en.wikipedia.org/wiki/Big_Gay_Al   \n",
        "Terrance and Phillip   https://en.wikipedia.org/wiki/Terrance_and_Phi...   \n",
        "Pip Pirrup                      https://en.wikipedia.org/wiki/Pip_Pirrup   \n",
+       "Jesus                       https://en.wikipedia.org/wiki/Jesus_and_Pals   \n",
+       "Catholic priest        https://en.wikipedia.org/wiki/Priesthood_in_th...   \n",
+       "Santa                  https://en.wikipedia.org/wiki/Santa_Claus_(Sou...   \n",
+       "Towelie                https://en.wikipedia.org/wiki/Towelie_(character)   \n",
+       "Chef                     https://en.wikipedia.org/wiki/Chef_(South_Park)   \n",
+       "Satan                   https://en.wikipedia.org/wiki/Satan_(South_Park)   \n",
        "Randy Marsh            https://en.wikipedia.org/wiki/Randy_and_Sharon...   \n",
        "Sharon Marsh           https://en.wikipedia.org/wiki/Randy_and_Sharon...   \n",
        "Gerald Broflovski      https://en.wikipedia.org/wiki/Gerald_and_Sheil...   \n",
@@ -1355,13 +1487,19 @@
        "Big Gay Al                       Big Gay Al  \n",
        "Terrance and Phillip   Terrance and Phillip  \n",
        "Pip Pirrup                              Pip  \n",
+       "Jesus                                 Jesus  \n",
+       "Catholic priest                      Priest  \n",
+       "Santa                                 Santa  \n",
+       "Towelie                             Towelie  \n",
+       "Chef                                   Chef  \n",
+       "Satan                                 Satan  \n",
        "Randy Marsh                           Randy  \n",
        "Sharon Marsh                         Sharon  \n",
        "Gerald Broflovski                    Gerald  \n",
        "Sheila Broflovski                    Sheila  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,7 +1510,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
+   "id": "ce474126",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "characters_df.to_csv('characters_csv.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "id": "6afb8d40",
    "metadata": {},
    "outputs": [],
