added loading from csv

--- a/Project/3_create_network_from_scripts.ipynb
+++ b/Project/3_create_network_from_scripts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 1,
    "id": "4f540018",
    "metadata": {},
    "outputs": [],
@@ -34,18 +34,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "ebc10440",
+   "execution_count": 3,
+   "id": "6588f343",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the characters data frame from wikipedia, which also includes the first names of the characters\n",
     "try:\n",
-    "    with open('wiki_characters_df.pickle', 'rb') as f:\n",
-    "        characters_df = pickle.load(f)\n",
+    "    characters_df = pd.read_csv('characters_csv.csv')\n",
     "except FileNotFoundError as e:\n",
     "    print(e)\n",
-    "    print('Run notebook 1_wikipedia_south_park_characters.ipynb')"
+    "    try:\n",
+    "        with open('wiki_characters_df.pickle', 'rb') as f:\n",
+    "            characters_df = pickle.load(f)\n",
+    "    except FileNotFoundError as e:\n",
+    "        print(e)\n",
+    "        print('Run notebook 1_wikipedia_south_park_characters.ipynb')                           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9e028e17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              name                                      wiki_link first_name\n",
+      "0       Stan Marsh       https://en.wikipedia.org/wiki/Stan_Marsh       Stan\n",
+      "1  Kyle Broflovski  https://en.wikipedia.org/wiki/Kyle_Broflovski       Kyle\n",
+      "2     Eric Cartman     https://en.wikipedia.org/wiki/Eric_Cartman    Cartman\n",
+      "3  Kenny McCormick  https://en.wikipedia.org/wiki/Kenny_McCormick      Kenny\n",
+      "4   Butters Stotch   https://en.wikipedia.org/wiki/Butters_Stotch    Butters\n",
+      "-----\n",
+      "Number of characters: 56\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(characters_df.head(5))\n",
+    "print('-'*5)\n",
+    "print(f'Number of characters: {len(characters_df)}')"
    ]
   },
   {
