--- a/Project/3_create_network_from_scripts.ipynb
+++ b/Project/3_create_network_from_scripts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "4f540018",
    "metadata": {},
    "outputs": [],
@@ -34,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6588f343",
+   "execution_count": 19,
+   "id": "56d0503b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9e028e17",
+   "execution_count": 20,
+   "id": "1b44ce96",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
    "id": "7865600e",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "ff60e316",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "8b45c5c2",
    "metadata": {},
    "outputs": [],
@@ -133,12 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 24,
    "id": "f80c4aaf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_dir(dir_path):\n",
+    "    import os\n",
     "    if not dir_path.is_dir():\n",
     "        os.mkdir(dir_path)\n",
     "        print(f'Created: {dir_path.as_posix()}')\n",
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "id": "621cb042",
    "metadata": {},
    "outputs": [],
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 26,
    "id": "edd2d870",
    "metadata": {},
    "outputs": [],
@@ -179,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 27,
    "id": "4341d5ab",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c766a5b283c4ba0b2235d996c21a190",
+       "model_id": "5a311c4ac9794b6b8ff8fe90cc495a57",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +277,13 @@
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/05 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/05 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/05 exists\n",
-      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/05 exists\n",
+      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/05 exists\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/05 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/05 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/05 exists\n",
@@ -305,13 +312,7 @@
       "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/07\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/07 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/07 exists\n",
-      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/07 exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/07 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/07 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/07 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/07 exists\n",
@@ -352,7 +353,13 @@
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/09 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/09 exists\n",
       "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/10\n",
-      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/10 exists\n",
+      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/10 exists\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/10 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/10 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/10 exists\n",
@@ -407,13 +414,7 @@
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/13 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/13 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/13 exists\n",
-      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/13 exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/13 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/13 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/13 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/13 exists\n",
@@ -434,7 +435,13 @@
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/14 exists\n",
       "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/15\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/15 exists\n",
-      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/15 exists\n",
+      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/15 exists\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/15 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/15 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/15 exists\n",
@@ -491,13 +498,7 @@
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/19 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/19 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/19 exists\n",
-      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/19 exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/19 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/19 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/19 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/19 exists\n",
@@ -512,7 +513,13 @@
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/20 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/20 exists\n",
       "Created: C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/21\n",
-      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/21 exists\n",
+      "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/21 exists\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/21 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/21 exists\n",
       "C:/Users/user/Documents/DTU/Fall_22_23/Social graphs/g_panag_repo/projects_socialgraphs22/Project/Relationships/21 exists\n",
@@ -622,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 28,
    "id": "3d33fc1b",
    "metadata": {},
    "outputs": [
@@ -690,38 +697,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>379</th>\n",
-       "      <td>Kyle</td>\n",
-       "      <td>Mackey</td>\n",
-       "      <td>2</td>\n",
+       "      <th>464</th>\n",
+       "      <td>Santa</td>\n",
+       "      <td>Stephen</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>380</th>\n",
-       "      <td>Sheila</td>\n",
-       "      <td>Shelly</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>381</th>\n",
+       "      <th>465</th>\n",
        "      <td>Jason</td>\n",
        "      <td>Jimbo</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>382</th>\n",
+       "      <th>466</th>\n",
        "      <td>Jason</td>\n",
        "      <td>Stephen</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>383</th>\n",
+       "      <th>467</th>\n",
+       "      <td>Jesus</td>\n",
+       "      <td>Stephen</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>468</th>\n",
        "      <td>Jimbo</td>\n",
        "      <td>Tuong Lu Kim</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>384 rows × 3 columns</p>\n",
+       "<p>469 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -732,16 +739,16 @@
        "3    Cartman          Kyle    1782\n",
        "4        Ike          Kyle      92\n",
        "..       ...           ...     ...\n",
-       "379     Kyle        Mackey       2\n",
-       "380   Sheila        Shelly       1\n",
-       "381    Jason         Jimbo       1\n",
-       "382    Jason       Stephen       1\n",
-       "383    Jimbo  Tuong Lu Kim       2\n",
+       "464    Santa       Stephen       3\n",
+       "465    Jason         Jimbo       1\n",
+       "466    Jason       Stephen       1\n",
+       "467    Jesus       Stephen       1\n",
+       "468    Jimbo  Tuong Lu Kim       2\n",
        "\n",
-       "[384 rows x 3 columns]"
+       "[469 rows x 3 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
